2025-08-19T12:52:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17070163727 # 1170
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-19
* notice: last 14d: unq all: 7 30
* notice: prev accum: outdated-unq outdated-all / unq all: 1162 5802 / 1180 5820
* notice: next accum: outdated-unq outdated-all / unq all: 1163 5803 / 1182 5833
* notice: prev exec diff / last date diff / accum: unq all: +2 +13 -0 -0 / +2 +13 -0 -0 / 2 13
* notice: removed / changed dates: [2025-08-05] / [2025-08-19]

2025-08-18T12:58:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17041291669 # 1168
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-18
* notice: last 14d: unq all: 6 18
* notice: prev accum: outdated-unq outdated-all / unq all: 1161 5801 / 1178 5818
* notice: next accum: outdated-unq outdated-all / unq all: 1162 5802 / 1180 5820
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-08-04] / [2025-08-18]

2025-08-18T02:23:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17029324179 # 1167
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-18
* notice: last 14d: unq all: 5 17
* notice: prev accum: outdated-unq outdated-all / unq all: 1158 5782 / 1178 5818
* notice: next accum: outdated-unq outdated-all / unq all: 1161 5801 / 1178 5818
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-03] / []

2025-08-17T12:52:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17021246701 # 1166