@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-19T12:52:08Z",
+  "timestamp" : "2025-08-20T02:02:27Z",
   "count_outdated" : 5803,
   "uniques_outdated" : 1163,
-  "count" : 5833,
-  "uniques" : 1182,
+  "count" : 5834,
+  "uniques" : 1183,
   "views" : [
     {
       "timestamp": "2025-08-06T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2025-08-19T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 13, 13 ],
-      "count_decinc": [ 0, 13 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 14,
+      "count_minmax": [ 13, 14 ],
+      "count_decinc": [ 0, 14 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
