@@ -1,3 +1,12 @@
+2025-08-20T02:02:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17086480355 # 1171
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-20
+* notice: last 14d: unq all: 8 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 1163 5803 / 1182 5833
+* notice: next accum: outdated-unq outdated-all / unq all: 1163 5803 / 1183 5834
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +14 -0 -0 / 3 14
+* notice: removed / changed dates: [] / [2025-08-19]
+
 2025-08-19T12:52:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17070163727 # 1170
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-19
